Sutter Health/src/objects/S3_Staffing__c.object
<CustomObject>
    <description>For Tracking Temps and Contractors</description>
    <fields>
        <fullName>Amended__c</fullName>
        <label>Amended</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>S3 Staff (CPC)</relationshipLabel>
        <relationshipName>S3_Staff_CPC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Candidate_ID__c</fullName>
        <description>Righsourcing Candidate ID for Temp staff</description>
        <externalId>true</externalId>
        <label>Candidate ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_ID__c</fullName>
        <description>External ID for righsourcing temp staff engagements</description>
        <externalId>true</externalId>
        <label>Engagement ID</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Engagement_Status__c</fullName>
        <label>Engagement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engaged</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Engaged-Pend Disengage</fullName>
                </value>
                <value>
                    <fullName>Disengaged-Poor</fullName>
                </value>
                <value>
                    <fullName>Disengaged-Hired</fullName>
                </value>
                <value>
                    <fullName>Disengaged-Good</fullName>
                </value>
                <value>
                    <fullName>Disengaged-Terminated</fullName>
                </value>
                <value>
                    <fullName>Disengaged-False start</fullName>
                </value>
                <value>
                    <fullName>Engagement Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engagement_Through_Date__c</fullName>
        <label>Engagement Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GL_Code__c</fullName>
        <label>GL Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>62600-0000</fullName>
                </value>
                <value>
                    <fullName>62600-0001 - Coding Manager</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Account Administrator</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Accountant</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Accounting Analyst</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Admin Coordinator</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - AP Exception Specialist</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - AP Processor</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Auditor</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Business Analyst</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Buyer</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Call Center Rep</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Claim Team Member</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Coder</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Coder II</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Coding Auditor</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Coding Training &amp; Audit</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Content Management Specialist</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Contractor</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Correspondence Team Member</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Credentialing Rep</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Customer Service Agent</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Customer Service Rep</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Data Analyst</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Denials Team Member</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - Financial Clearance Rep</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - HIM Specialist</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - HMO Claims Follow Up Team Member</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - HR Coordinator</fullName>
                </value>
                <value>
                    <fullName>62600-0100 - HR Customer Services Rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S3 - Sutter Shared Services</fullName>
                </value>
                <value>
                    <fullName>SHSO - Alta Bates Med Center</fullName>
                </value>
                <value>
                    <fullName>SHSO - PAD Ortega</fullName>
                </value>
                <value>
                    <fullName>SHSO - Remote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Start_Date__c</fullName>
        <label>Original Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Accounting__c</fullName>
        <label>Project Accounting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1000-Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>101501-ADMINISTRATION</fullName>
                </value>
                <value>
                    <fullName>101570-FACILITY &amp; PROPERTY SERVICES</fullName>
                </value>
                <value>
                    <fullName>101604-SUTTER SURGERY CENTER DIVISION</fullName>
                </value>
                <value>
                    <fullName>103000-REIMBURSEMENT</fullName>
                </value>
                <value>
                    <fullName>104500-HUMAN RESOURCES</fullName>
                </value>
                <value>
                    <fullName>104588-EMPLOYEE BENEFITS</fullName>
                </value>
                <value>
                    <fullName>105910-INSURANCE</fullName>
                </value>
                <value>
                    <fullName>256383-IS EHR ACUTE IMPLEMENTATION</fullName>
                </value>
                <value>
                    <fullName>301099-SHARED SERVICES UNASSIGNED</fullName>
                </value>
                <value>
                    <fullName>600502-SHARED SERVICES CENTER</fullName>
                </value>
                <value>
                    <fullName>601401-HR-01B</fullName>
                </value>
                <value>
                    <fullName>618400-PURCHASING</fullName>
                </value>
                <value>
                    <fullName>618402-STRATEGIC SOURCING</fullName>
                </value>
                <value>
                    <fullName>618406-OPERATIONS &amp; PROCESSES</fullName>
                </value>
                <value>
                    <fullName>618510-ACCOUNTING-GL</fullName>
                </value>
                <value>
                    <fullName>618511-ACCOUNTING-AR</fullName>
                </value>
                <value>
                    <fullName>618514-ACCOUNTS PAYABLE</fullName>
                </value>
                <value>
                    <fullName>618515-PAYROLL</fullName>
                </value>
                <value>
                    <fullName>618531-CDM</fullName>
                </value>
                <value>
                    <fullName>618532-CBO - GOVERNMENT CLAIMS</fullName>
                </value>
                <value>
                    <fullName>618533-CBO - NON GOVT CLAIMS</fullName>
                </value>
                <value>
                    <fullName>618534-CBO OPERATIONS</fullName>
                </value>
                <value>
                    <fullName>618535-CBO PAYER MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>618538-REVENUE CYCLE ADMIN</fullName>
                </value>
                <value>
                    <fullName>618539-CBO ADMIN</fullName>
                </value>
                <value>
                    <fullName>618540-CBO Patient Services</fullName>
                </value>
                <value>
                    <fullName>618541- CBO - MANAGED GOVERNMENT</fullName>
                </value>
                <value>
                    <fullName>618561-PATIENT ACCESS-PRE SERVICE</fullName>
                </value>
                <value>
                    <fullName>618562 - S3 - Claim Edits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Structure__c</fullName>
        <label>Rate Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RightSourcing Payroll Service - Non-Exempt</fullName>
                </value>
                <value>
                    <fullName>Standard Rate Structure - Non Exempt</fullName>
                </value>
                <value>
                    <fullName>Standard Rate Structure - Non Exempt - Himagine FTE 36-50 - 08.08.15</fullName>
                </value>
                <value>
                    <fullName>Coders Rate Structure - Himagine</fullName>
                </value>
                <value>
                    <fullName>Coders Rate Structure - Non Exempt - Per Chart and Hourly</fullName>
                </value>
                <value>
                    <fullName>Coders Rate Structure - Comforce &amp; On Assignment</fullName>
                </value>
                <value>
                    <fullName>Coders Rate Structure - Non Exempt - Per Chart and Hourly*</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reports To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>S3 Staff</relationshipLabel>
        <relationshipName>S3_Staff_Mgr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Req_Title__c</fullName>
        <label>Req Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Position__c</fullName>
        <label>Temp Position</label>
        <referenceTo>S3_PCD__c</referenceTo>
        <relationshipLabel>S3 Temp Staff</relationshipLabel>
        <relationshipName>S3_Staff_Temp_Position</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting Principals &amp; Ajilon</fullName>
                </value>
                <value>
                    <fullName>Adecco USA</fullName>
                </value>
                <value>
                    <fullName>Aerotek</fullName>
                </value>
                <value>
                    <fullName>AppleOne</fullName>
                </value>
                <value>
                    <fullName>DirectApps Inc.</fullName>
                </value>
                <value>
                    <fullName>Excite Health Partners</fullName>
                </value>
                <value>
                    <fullName>HCTec (T1-apps)</fullName>
                </value>
                <value>
                    <fullName>Himagine Solutions</fullName>
                </value>
                <value>
                    <fullName>Kforce Inc</fullName>
                </value>
                <value>
                    <fullName>Manpower Group</fullName>
                </value>
                <value>
                    <fullName>Maxim Healthcare Services</fullName>
                </value>
                <value>
                    <fullName>Medlinks Cost Containment, Inc.</fullName>
                </value>
                <value>
                    <fullName>MGA Healthcare Torrance, INC.</fullName>
                </value>
                <value>
                    <fullName>Nelson Family of Companies</fullName>
                </value>
                <value>
                    <fullName>Pacific Temporary Services, Inc.-Pacific Staffing</fullName>
                </value>
                <value>
                    <fullName>Randstad Technologies, LP</fullName>
                </value>
                <value>
                    <fullName>RightSourcing-Irvine, CA</fullName>
                </value>
                <value>
                    <fullName>River City Staffing, Inc.</fullName>
                </value>
                <value>
                    <fullName>Robert Half International</fullName>
                </value>
                <value>
                    <fullName>Verso Genics D.B.A. Comforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Worker_Name__c</fullName>
        <label>Worker Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>S3 Staffing</label>
    <nameField>
        <displayFormat>TEMP{00000}</displayFormat>
        <label>S3 Staffing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S3 Staff</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>